Correctly aligns goal label in file explorer #31

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .nav-file-title, .nav-folder-title {
-    justify-content: space-between;
+    flex-grow: 1;
 }
 
 .stats-detail svg {
